Sun Jan 13 23:35:27 GMT 2008  Ivan Shmakov  <oneingray@gmail.com>

	Add a command-line option to man to enable groff warnings.

	* src/man.c (enum opts, struct string_llist): New types.
	  (default_roff_warnings, roff_warnings): Set defaults.
	  (options, parse_opt): Accept --warnings.
	  (make_roff_command): Add warnings to groff command line.
	* man/man1/man.man1 (SYNOPSIS, OPTIONS): Document --warnings.
	* docs/NEWS: Document this.

Thu Jan 10 09:24:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (local_man_loop): Guess language based on absolute path
	  to provided file, rather than relative (Debian bug #460014).

Mon Jan  7 17:28:54 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/xmalloc.patch: Add commentary.

Mon Jan  7 15:30:56 GMT 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* po/ru.po: Update from Translation Project.

Mon Jan  7 11:38:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/replace.sin: Rename to ...
	* man/replace.sin.in: ... this.
	* configure.ac (AC_CONFIG_FILES): Generate man/replace.sin.
	* man/Rules.man (CLEANFILES, replace.sed, .man1.1, .man5.5,
	  .man8.8): Generate replace.sed at 'make' time so that
	  $(config_file) is substituted properly. Reported by Peter
	  Breitenlohner.
	* .bzrignore: Update.

Mon Jan  7 11:14:04 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* manual/Makefile.am: Use soelim with -I$(srcdir).

	* man/Rules.man (mandir): Append the language so that Automake can
	  handle translated manual pages.
	  (install-data-local, uninstall-local): Removed in favor of rules
	  generated by Automake.
	  (CLEANFILES, dist-hook): Go back to using man*_MANS.
	  (all-am): Remove explicit dependencies.
	* man/Makefile.am, man/de/Makefile.am, man/es/Makefile.am,
	  man/fr/Makefile.am, man/it/Makefile.am, man/ja/Makefile.am: Go
	  back to using man*_MANS.

	* man/man8/accessdb.man8, man/fr/man8/accessdb.man8: Fix typo (-V,
	  not -v).

	* manual/Makefile.am (.pp.ps): Use groff -Tps, not -Tdvi.
