@@ -1,3 +1,10 @@
+Mon Jan 14 00:00:21 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog_test.c (parse_opt): Use argp_error rather than
+	  error/argp_usage. Suggested by Ivan Shmakov.
+	* src/man.c (parse_opt): Likewise.
+	* src/manconv.c (parse_opt): Likewise.
+
 Sun Jan 13 23:35:27 GMT 2008  Ivan Shmakov  <oneingray@gmail.com>
 
 	Add a command-line option to man to enable groff warnings.
